# ChangeLog for dev-util/eclipse-sdk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Dec 2007; <alistair@gentoo.org> +eclipse-sdk-3.3.1.1-r2.ebuild:
  Bumping eclipse-sdk to record its jar files

  16 Dec 2007; <alistair@gentoo.org> -eclipse-sdk-3.2.1-r3.ebuild,
  -eclipse-sdk-3.3-r3.ebuild:
  Cleaning up outdated eclipse-sdk ebuilds.

  16 Dec 2007; <alistair@gentoo.org>
  +files/3.3/eclipse-jsch-api-update.patch, +eclipse-sdk-3.3.1.1-r1.ebuild:
  Bump eclipse-sdk to support newer version of jsch

  04 Oct 2007; Jean-Noël Rivasseau <elvanor@gmail.com> files/eclipse-3.3,
  metadata.xml, eclipse-sdk-3.3-r1.ebuild, +eclipse-sdk-3.3-r2.ebuild:
  Initial working ebuild based on geki's work. It uses new ebuilds of swt,
  ant-core and jsch that have specially packaged jars (compatible with the
  OSGi system).

  04 May 2007; Vlastimil Babka <caster@gentoo.org>
  eclipse-sdk-3.2.1-r3.ebuild:
  Micromanage ant-tasks dep to prevent bug #177079.

  26 Apr 2007; Vlastimil Babka <caster@gentoo.org>
  -eclipse-sdk-3.2.1-r2.ebuild, +eclipse-sdk-3.2.1-r3.ebuild:
  Revbump to support split-ant; fix building with JAVA_PKG_STRICT.

  15 Dec 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  revised patchset. added junit4 support. patched javadocs links

  17 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  small cleanup

  14 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  added TOMCAT use flag

  07 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  reverting to latest running eclipse ebuild, due to errors on eclipse startup

  06 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  added tomcat use flag. reviewed patchset

  01 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  digester-rss dependency changed

  01 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  Added missing eclipse-ecj-3.2 dependency

  01 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog: