@@ -13,7 +13,7 @@ AUX 3.3/set-java-home.diff 417 RMD160 f4ec180dfad9c81e41f91cad562739a2d9198239 S
 AUX eclipse-3.2 1145 RMD160 141c5d412c50dcb106654b4078cbaf379b468130 SHA1 6c317e42b7697d849bbd5616519642be345c74f3 SHA256 920b48ed98bc18f6e90769fe084eced46304c4c1a8b3999c5644297f437b1cbd
 DIST eclipse-sourceBuild-srcIncluded-3.3.1.1.zip 94267330 RMD160 78d19b528e99c3f3416de099ab5dcd59430fc9ac SHA1 901f4c66acf4c988fc08f78f3ffcd45b3748b344 SHA256 e4c24d54a2b9bc630f961320c61f8e804255f49b141370d240ce0444eb89a658
 EBUILD eclipse-sdk-3.3.1.1-r1.ebuild 12315 RMD160 192913eaf2c2a30d6b7239c14afb1bba981bd29d SHA1 f493040143f94a68f50e3bbce12ce6cdf07f9a7f SHA256 3ccfd99b7f11467adeb370e05628728ee4728ad2f9916cf8c72cb306c204c838
-EBUILD eclipse-sdk-3.3.1.1-r2.ebuild 12767 RMD160 a27dc037d23a4855b3f5bb657a64fa9784c58e21 SHA1 fbda7e27a70d2ebd13e3c5c9c24bee4a681f4ffb SHA256 9a938a3f1f1118354b0e65f89c5b77fe7e094d2d8cc86918fa24855c7f86fb56
+EBUILD eclipse-sdk-3.3.1.1-r2.ebuild 12773 RMD160 75d8f937ce63ff0e3a3d41249131a271493dd784 SHA1 abdd92270aba1b3df1755845b11b2cb3ca3f53f2 SHA256 0fa2402b413b117addbf305544dc471c16a8f10533658f3c788a982c708384a4
 EBUILD eclipse-sdk-3.3.1.1.ebuild 12069 RMD160 dc94b6ec5a5810b639d38aa5442689603ecb21ab SHA1 97ca6e29943625a328c084da882ad76be6a4e6ec SHA256 b1b7187b282033eb77e8b4de103f369e281656939ab81391d12a9c3611d9cbd1
-MISC ChangeLog 2184 RMD160 0919e197aa967cb4b1bff682b272203bd0fea29e SHA1 f022d2665b7f3fac0a15c3edf66a269f1d7fa753 SHA256 dbeea28dbe3929ed849f224e65c7e26092f5e52e2b033d8146b857b6cebcbe8b
+MISC ChangeLog 2338 RMD160 26e044526bb3b172d712d220307703d6e67c826e SHA1 5b2c1550d8d96ee0c844e30fea9578bf9b7085c6 SHA256 2e201baf54a853dff8decb701433981b088fd16285bd2f1f89a2b3f6f021331b
 MISC metadata.xml 614 RMD160 585d44b6fad2b1c95ce7aae8c12bec67f30c92f5 SHA1 119b97637ecce1e3e8df62b22a9c5d0d3768aa19 SHA256 689c84d094d36b3e3d5a0cf5a00c498ac4c0a5ae15a97752daa944ba78b125b2
